# devflow-mcp-server

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/devflow_mcp/: __init__.py  __main__.py  config_store.py  db.py  paths.py  project_scanner.py  runbook.py  server.py  standards.py
tests/: conftest.py  test_config_store.py  test_db.py  test_paths.py  test_project_scanner.py  test_runbook.py  test_server.py  test_server_extras.py  test_standards.py
